Listar crear editar
Pendiente refactorizar de acuerdo a la arquitectura